apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - n8n.k8s.logikdev.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 80
